add domain for mailing and fixing cors on local development
